--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,8 @@ orbs:
 workflows:
   maven_test:
     jobs:
+      - build:
+          - docker:
+              - image: circleci/openjdk:11-browsers-legacy
+
       - maven/test # checkout, build, test, and upload test results
